[gd_scene load_steps=12 format=3 uid="uid://dnexsl4bl6nrh"]

[ext_resource type="Script" path="res://controlcolor2.gd" id="1_8w100"]
[ext_resource type="Script" path="res://colorchangingbody.gd" id="2_1l227"]
[ext_resource type="FontFile" uid="uid://cu1b0xcfhq0l" path="res://assets/retro.ttf" id="2_2fufg"]
[ext_resource type="Theme" uid="uid://x1jilwxptgyk" path="res://tooltiptheme.tres" id="3_lc5cm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2e27"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xupsx"]
size = Vector2(25, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51pos"]
size = Vector2(14, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljclx"]
size = Vector2(37, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b68jf"]
size = Vector2(1152, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0qb3"]
size = Vector2(1153, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cop8d"]
size = Vector2(58, 648)

[node name="Level16" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8w100")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("2_1l227")

[node name="ColorRect2" type="ColorRect" parent="CharacterBody2D"]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 556.0
offset_top = 304.0
offset_right = 596.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.215686, 0.215686, 0.215686, 0.411765)

[node name="Button" type="Button" parent="CharacterBody2D"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 555.0
offset_top = 304.0
offset_right = 597.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
text = "help
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(576, 324)
shape = SubResource("RectangleShape2D_o2e27")

[node name="LevelNumber" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 36.0
offset_right = 20.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_2fufg")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusMinus" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -41.0
offset_right = 343.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2fufg")
theme_override_font_sizes/font_size = 64
text = "+                           -"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(662, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(245.5, 324)
shape = SubResource("RectangleShape2D_xupsx")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-659, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(904, 323.5)
shape = SubResource("RectangleShape2D_51pos")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(904.5, 323)
shape = SubResource("RectangleShape2D_ljclx")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -18.5)
shape = SubResource("RectangleShape2D_b68jf")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(575.5, 668)
shape = SubResource("RectangleShape2D_k0qb3")

[node name="Left" type="CollisionShape2D" parent="Borders"]
position = Vector2(-29, 324)
shape = SubResource("RectangleShape2D_cop8d")

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2(1181, 324)
shape = SubResource("RectangleShape2D_cop8d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.0
offset_top = 93.0
offset_right = 186.0
offset_bottom = 278.0
grow_horizontal = 2

[node name="Timer" type="Timer" parent="VBoxContainer"]
wait_time = 180.0
autostart = true

[node name="Reset" type="Button" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("3_lc5cm")
theme_override_font_sizes/font_size = 40
text = "reset"

[node name="Label" type="Label" parent="VBoxContainer/Reset"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -25.5
offset_right = 72.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "reset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 59)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2fufg")
theme_override_font_sizes/font_size = 40
text = "mode:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hint" type="Button" parent="VBoxContainer"]
visible = false
z_index = 1
layout_mode = 2
theme = ExtResource("3_lc5cm")
theme_override_fonts/font = ExtResource("2_2fufg")
theme_override_font_sizes/font_size = 40
text = "hint"

[node name="ValuesLabel" type="Label" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 59)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2fufg")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CharacterBody2D/Button" to="Control" method="_on_button_pressed"]
[connection signal="body_entered" from="Area2D" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="CharacterBody2D" method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="VBoxContainer/Timer" to="Control" method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/Reset" to="CharacterBody2D" method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/Hint" to="Control" method="_on_hint_pressed"]
